# paulstretchlib

./: .gitignore  .gitmodules  README.md
app-cxx/: AFOverview.cpp  AFOverview.hpp  CMakeLists.txt  CoreExceptions.hpp  Optional.hpp  README.md  UI.cpp  UI.hpp  build-mac.sh  build-win-mingw32.sh  build-win.bat  gen-xcode.sh  imgui.ini  paulstretch-imgui-glfw-gl2.cpp  paulstretch-imgui-glfw.cpp  paulstretch-imgui.cpp
app-cxx/xcode/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cmake_install.cmake
app-cxx/xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
app-cxx/xcode/GLFW/: cmake_install.cmake  cmake_uninstall.cmake
app-cxx/xcode/GLFW/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease  install_postBuildPhase.makeRelease  uninstall_cmakeRulesBuildPhase.makeDebug
app-cxx/xcode/GLFW/GLFW.xcodeproj/: project.pbxproj
app-cxx/xcode/GLFW/docs/: Doxyfile  cmake_install.cmake
app-cxx/xcode/GLFW/docs/CMakeScripts/: docs_cmakeRulesBuildPhase.makeDebug
app-cxx/xcode/GLFW/src/: cmake_install.cmake
app-cxx/xcode/GLFW/src/paulstretch-imgui.build/Debug/glfw.build/: dgph  dgph~
app-cxx/xcode/paulstretch-imgui.build/Debug/ALL_BUILD.build/: Script-BCDF0BE23F964575A083B097.sh  dgph
app-cxx/xcode/paulstretch-imgui.build/Debug/ZERO_CHECK.build/: Script-39007AB7D6DA4833BC95F30E.sh  dgph  dgph~
app-cxx/xcode/paulstretch-imgui.build/Debug/paulstretch-imgui.build/: dgph
app-cxx/xcode/paulstretch-imgui.build/Debug/paulstretch-imgui.build/Objects-normal/x86_64/: paulstretch-imgui.LinkFileList
app-cxx/xcode/paulstretch-imgui.xcodeproj/: project.pbxproj
app-cxx/xcode/paulstretch-imgui.xcodeproj/project.xcworkspace/xcuserdata/njazz.xcuserdatad/: UserInterfaceState.xcuserstate
app-cxx/xcode/paulstretch-imgui.xcodeproj/xcuserdata/njazz.xcuserdatad/xcschemes/: xcschememanagement.plist
app-cxx/xcode/pslib/: cmake_install.cmake
app-cxx/xcode/pslib/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel  libaudiofile_cmakeRulesBuildPhase.makeRelWithDebInfo  paulstretchlib_postBuildPhase.makeDebug  paulstretchlib_postBuildPhase.makeMinSizeRel  paulstretchlib_postBuildPhase.makeRelWithDebInfo  paulstretchlib_postBuildPhase.makeRelease
app-cxx/xcode/pslib/FLAC/: CTestTestfile.cmake  DartConfiguration.tcl  cmake_install.cmake  config.h
app-cxx/xcode/pslib/FLAC/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  Continuous_cmakeRulesBuildPhase.makeMinSizeRel  Experimental_cmakeRulesBuildPhase.makeRelWithDebInfo  NightlyMemoryCheck_cmakeRulesBuildPhase.makeRelWithDebInfo  Nightly_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug  package_postBuildPhase.makeRelWithDebInfo
app-cxx/xcode/pslib/FLAC/FLAC.xcodeproj/: project.pbxproj
app-cxx/xcode/pslib/FLAC/doc/: CTestTestfile.cmake  Doxyfile.FLAC-doxygen  cmake_install.cmake
app-cxx/xcode/pslib/FLAC/doc/CMakeScripts/: FLAC-doxygen_cmakeRulesBuildPhase.makeDebug
app-cxx/xcode/pslib/FLAC/examples/: CTestTestfile.cmake  cmake_install.cmake
app-cxx/xcode/pslib/FLAC/microbench/: CTestTestfile.cmake  cmake_install.cmake
app-cxx/xcode/pslib/FLAC/src/: CTestTestfile.cmake  cmake_install.cmake
app-cxx/xcode/pslib/FLAC/src/flac/: CTestTestfile.cmake  cmake_install.cmake
app-cxx/xcode/pslib/FLAC/src/libFLAC/: CTestTestfile.cmake  cmake_install.cmake
app-cxx/xcode/pslib/FLAC/src/metaflac/: CTestTestfile.cmake  cmake_install.cmake
app-cxx/xcode/pslib/FLAC/src/share/getopt/: CTestTestfile.cmake  cmake_install.cmake
app-cxx/xcode/pslib/FLAC/src/share/grabbag/: CTestTestfile.cmake  cmake_install.cmake
app-cxx/xcode/pslib/FLAC/src/share/replaygain_analysis/: CTestTestfile.cmake  cmake_install.cmake
app-cxx/xcode/pslib/FLAC/src/share/replaygain_synthesis/: CTestTestfile.cmake  cmake_install.cmake
app-cxx/xcode/pslib/FLAC/src/share/utf8/: CTestTestfile.cmake  cmake_install.cmake
app-cxx/xcode/pslib/FLAC/src/test_grabbag/: CTestTestfile.cmake  cmake_install.cmake
app-cxx/xcode/pslib/FLAC/src/test_grabbag/cuesheet/: CTestTestfile.cmake  cmake_install.cmake
app-cxx/xcode/pslib/FLAC/src/test_grabbag/picture/: CTestTestfile.cmake  cmake_install.cmake
app-cxx/xcode/pslib/FLAC/src/test_libFLAC/: CTestTestfile.cmake  cmake_install.cmake
app-cxx/xcode/pslib/FLAC/src/test_libs_common/: CTestTestfile.cmake  cmake_install.cmake
app-cxx/xcode/pslib/FLAC/src/test_seeking/: CTestTestfile.cmake  cmake_install.cmake
app-cxx/xcode/pslib/FLAC/src/test_streams/: CTestTestfile.cmake  cmake_install.cmake
app-cxx/xcode/pslib/FLAC/test/: CTestTestfile.cmake  cmake_install.cmake  common.sh
app-cxx/xcode/pslib/libaudiofile-prefix/tmp/: libaudiofile-cfgcmd.txt
app-cxx/xcode/pslib/paulstretch-imgui.build/Debug/ALAC.build/: dgph  dgph~
app-cxx/xcode/pslib/paulstretch-imgui.build/Debug/G711.build/: dgph  dgph~
app-cxx/xcode/pslib/paulstretch-imgui.build/Debug/libaudiofile.build/: Script-77DCCE1F24A240F5A243E2B0.sh  dgph  dgph~
app-cxx/xcode/pslib/paulstretch-imgui.build/Debug/paulstretchlib-static.build/: dgph~
app-cxx/xcode/pslib/paulstretch-imgui.build/Debug/paulstretchlib.build/: Script-6B76AEDF5D5048668B68E22E.sh  dgph  dgph~
app-cxx/xcode/pslib/paulstretchlib.xcodeproj/: project.pbxproj
app-cxx/xcode/pslib/portaudio/: cmake_install.cmake
app-cxx/xcode/pslib/portaudio/paulstretch-imgui.build/Debug/portaudio.build/: dgph  dgph~
app-py/: paulstretch_imgui.py  ps_imgui.sh
lib/: CMakeLists.txt  JSONCodec.cpp  JSONCodec.hpp  LiteControl.cpp  LiteControl.h  PaulstretchLib.cpp  PaulstretchLib.hpp  StringUtilities.hpp  TextFileIO.cpp  TextFileIO.hpp
lib/build-lib/: CMakeCache.txt  Makefile  cmake_install.cmake
py/: CMakeLists.txt  module.cpp  setup.py
py/paulstretchpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+135 files in other folders)
